k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fsl-service
  namespace: production
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      name: web
      targetPort: 80
  selector:
    app: fsl-app
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fsl-statefulset
  namespace: production
spec:
  serviceName: 'fsl-service'
  replicas: 2
  selector:
    matchLabels:
      app: fsl-app
  template:
    metadata:
      labels:
        app: fsl-app
    spec:
      containers:
        - name: fsl-container
          image: mrbarragan17/devops-challenge:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
